[gd_scene format=3 uid="uid://0gymvt6vwfwk"]

[ext_resource type="Script" uid="uid://yuxpxuxk4s3f" path="res://npc/scripts/enemy_eye_watcher.gd" id="1_bipxp"]
[ext_resource type="Texture2D" uid="uid://ci3syxqvkr0h6" path="res://npc/sprites/Sprite7.png" id="2_bipxp"]
[ext_resource type="Texture2D" uid="uid://dyknowv4bs86p" path="res://npc/sprites/enemy_eyewatchert.png" id="2_jx83e"]
[ext_resource type="AudioStream" uid="uid://b6ejrftrlusvn" path="res://systems/sounds/sound_flesh_growing.mp3" id="4_jx83e"]

[sub_resource type="Gradient" id="Gradient_jx83e"]
offsets = PackedFloat32Array(0.53409094, 1)
colors = PackedColorArray(0.9375, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q413j"]
gradient = SubResource("Gradient_jx83e")
width = 256
height = 256
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.2)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_bipxp"]
offsets = PackedFloat32Array(0.45454547, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jx83e"]
gradient = SubResource("Gradient_bipxp")
width = 256
height = 256
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.7, 0.1)
metadata/_snap_enabled = true

[sub_resource type="CircleShape2D" id="CircleShape2D_dxxor"]
radius = 32.0

[sub_resource type="Animation" id="Animation_mujk7"]
length = 0.001

[sub_resource type="Animation" id="Animation_tjmiu"]
resource_name = "closing_eyes"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2333333, 2.4, 3.5333333, 4.6666665, 5.8333335, 7.0333333, 8.166667, 9.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_bipxp"]
resource_name = "idle_close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_h1uug"]
resource_name = "opening_eyes"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.0999999, 2.266667, 3.4, 4.5666666, 5.733333, 6.9, 8.066667, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 7, 6, 5, 4, 3, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mujk7"]
_data = {
&"RESET": SubResource("Animation_mujk7"),
&"closing_eyes": SubResource("Animation_tjmiu"),
&"idle_close": SubResource("Animation_bipxp"),
&"opening_eyes": SubResource("Animation_h1uug")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_8t6eb"]
radius = 6.0

[node name="Enemy_EyeWatcher" type="CharacterBody2D" unique_id=735344935 node_paths=PackedStringArray("npc_dialogue_sprite", "npc_area_2d")]
collision_layer = 18
collision_mask = 16
script = ExtResource("1_bipxp")
npc_file_path = null
npc_name = "Eye Watcher"
npc_dialogue_sprite = NodePath("Sprite2D-DialogueSprite")
npc_area_2d = NodePath("Area2D")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=198759363]
position = Vector2(0, -39)
texture = ExtResource("2_jx83e")
hframes = 9

[node name="light_eyes" type="PointLight2D" parent="Sprite2D" unique_id=841967674]
position = Vector2(1, -20)
scale = Vector2(0.96875, 0.8125)
energy = 1.5
texture = SubResource("GradientTexture2D_q413j")
texture_scale = 0.26

[node name="light_ambient" type="PointLight2D" parent="Sprite2D" unique_id=1635657309]
position = Vector2(2, -21)
scale = Vector2(1.53125, 1.3125)
color = Color(1, 0.203125, 0.203125, 1)
energy = 0.15
texture = SubResource("GradientTexture2D_jx83e")
texture_scale = 0.4

[node name="Sprite2D-DialogueSprite" type="Sprite2D" parent="." unique_id=1828147248]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(0, -28.5)
texture = ExtResource("2_bipxp")
region_enabled = true
region_rect = Rect2(15, 5, 17, 21)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=305634929]
visible = false
position = Vector2(2, -39)
shape = SubResource("CircleShape2D_dxxor")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1438701404]
libraries/ = SubResource("AnimationLibrary_mujk7")
autoplay = &"idle_close"

[node name="Area2D" type="Area2D" parent="." unique_id=1579615963]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1595997778]
modulate = Color(0.863281, 0.0910492, 0.0910492, 1)
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_8t6eb")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." unique_id=1231398173]
path_postprocessing = 1
simplify_path = true
debug_enabled = true

[node name="global_light" type="DirectionalLight2D" parent="." unique_id=1136763215]
visible = false
energy = 0.15
blend_mode = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=537834575]
stream = ExtResource("4_jx83e")
